change template folder structure

--- a/BrainNotFound/src/PeerConnect/templates/PeerConnect/student_dashboard.html
+++ b/BrainNotFound/src/PeerConnect/templates/PeerConnect/student_dashboard.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css?family=Inder&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Instrument+Sans&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
-        <link href="./main.css" rel="stylesheet" />
+        <link href="./styles/landingpage.css" rel="stylesheet" />
         <title>Document</title>
     </head>
     <body>
