update peer answer html and css

--- a/PeerConnect/templates/PeerConnect/peer_answer_qual.html
+++ b/PeerConnect/templates/PeerConnect/peer_answer_qual.html
@@ -1,8 +1,9 @@
+{%load static %}
 <!DOCTYPE html>
 <html>
    <head>
       <link href="https://fonts.googleapis.com/css?family=Inder&display=swap" rel="stylesheet" />
-      <link href="./css/main.css" rel="stylesheet" />
+      <link href="{% static 'styles/peer_answer_qual.css' %}" rel="stylesheet" />
       <title>Document</title>
    </head>
    <body>
