update base.html and create navbar.html

--- a/PeerConnect/templates/PeerConnect/peer_answer_qual.html
+++ b/PeerConnect/templates/PeerConnect/peer_answer_qual.html
@@ -1,12 +1,6 @@
-{%load static %}
-<!DOCTYPE html>
-<html>
-   <head>
-      <link href="https://fonts.googleapis.com/css?family=Inder&display=swap" rel="stylesheet" />
-      <link href="{% static 'styles/peer_answer_qual.css' %}" rel="stylesheet" />
-      <title>Document</title>
-   </head>
-   <body>
+{% extends 'base.html' %}
+
+{% block content %}
       <div class="v6_10">
          <div class="v13_2"></div>
          <span class="v13_6">Quantitative</span>
@@ -29,5 +23,4 @@
             <div class="v116_1197"></div>
          </div>
       </div>
-   </body>
-</html>
+{% endblock %}
