--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -1,6 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Inder&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Instrument+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+
+    <link href="{% static 'styles/student_dashboard.css' %}" rel="stylesheet" /> 
+    <link href="{% static 'styles/peer_answer_quant.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/peer_answer_qual.css' %}" rel="stylesheet" />
+
     <title>PeerConnect</title>
 </head>
 <body>
