--- a/PeerConnect/templates/PeerConnect/peer_assessment_summary.html
+++ b/PeerConnect/templates/PeerConnect/peer_assessment_summary.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Inder&display=swap" rel="stylesheet" />
-        <link href="./main.css" rel="stylesheet" />
+        <link href="{% static 'styles/peer_assessment_summary.css' %}" rel="stylesheet" />
         <title>Document</title>
     </head>
     <body>
