Save correct structure

--- a/PeerConnect/templates/PeerConnect/landingpage.html
+++ b/PeerConnect/templates/PeerConnect/landingpage.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-      <link href="https://fonts.googleapis.com/css?family=Inder&display=swap" rel="stylesheet" />
-      <link href="./css/main.css" rel="stylesheet" />
-      <title>Document</title>
-   </head>
-   <body>
+{% extends 'base.html' %}
+
+{% block content %}
       <div class="v6_2">
          <span class="v4_2">Welcome to PeerConnect</span><span class="v4_44">“Rate, review, and (hopefully) remain friends!”</span>
          <div class="v4_1374"></div>
@@ -18,5 +12,4 @@
          <div class="name"></div>
          <div class="name"></div>
       </div>
-   </body>
-</html>
+{% endblock %}
