--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -12,6 +12,7 @@
     <link href="{% static 'styles/student_dashboard.css' %}" rel="stylesheet" /> 
     <link href="{% static 'styles/peer_answer_quant.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/peer_answer_qual.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/landingpage.css' %}" rel="stylesheet" />
 
     <title>PeerConnect</title>
 </head>
