--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -9,10 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
 
-    <link href="{% static 'styles/student_dashboard.css' %}" rel="stylesheet" /> 
     <link href="{% static 'styles/peer_answer_quant.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/peer_answer_qual.css' %}" rel="stylesheet" />
-    <link href="{% static 'styles/landingpage.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/peer_answer_tabs.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/student_dashboard.css' %}" rel="stylesheet" /> 
+    <link href="{% static 'styles/navbar.css' %}" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>PeerConnect</title>
 </head>
