--- a/PeerConnect/templates/navbar.html
+++ b/PeerConnect/templates/navbar.html
@@ -1,7 +1,4 @@
-<nav>
-    <ul>
-        <li>Home</li>
-        <li>My Courses</li>
-        <li>My Profile</li>
-    </ul>
-</nav>
+<div class="sidebar">
+    <p class="sidebar-title"><a href="{% url 'student_dashboard' %}">Dashboard</a></p>
+    <p class="user-name">John Doe <span class="user-role">(student)</span></p>
+</div>
