--- a/PeerConnect/templates/PeerConnect/student_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/student_dashboard.html
@@ -1,25 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-      <div class="v108_1133">
-         <div class="v108_1134">
-            <div class="v108_1135"></div>
-            <div class="name"></div>
-            <span class="v108_1137">My Courses</span><span class="v108_1138">John Doe</span><span class="v108_1139">(Student)</span>
-            <div class="v108_1140"></div>
+      <div class="assessment-container">
+         <h1 class="greeting">Welcome, John!</h1>
+         <div class="to-do">
+            <h2>To Do:</h2>
+            <button class="to-do-btn">Peer Assessment - Delivery Two</button>
          </div>
-         <span class="v108_1143"> 👋 Welcome, John!</span><span class="v108_1170">To Do:</span><span class="v108_1173">Results:</span>
-         <div class="v108_1180">
-            <div class="v108_1181">
-               <div class="v108_1182"><span class="v108_1183">CSCI3349</span></div>
-               <div class="v108_1184"><span class="v108_1185">Peer Assessment - Delivery Two</span><span class="v108_1186">Click to start</span></div>
-            </div>
-         </div>
-         <div class="v108_1205">
-            <div class="v108_1206">
-               <div class="v108_1207"><span class="v108_1208">CSCI3349</span></div>
-               <div class="v108_1209"><span class="v108_1210">Peer Assessment - Delivery One</span><span class="v108_1211">Click to view</span></div>
-            </div>
+         <div class="results">
+            <h2>Results</h2>
+            <button class="results-btn">Peer Assessment - Delivery One</button>
          </div>
       </div>
 {% endblock %}
