--- a/PeerConnect/static/styles/student_dashboard.css
+++ b/PeerConnect/static/styles/student_dashboard.css
@@ -12,8 +12,7 @@ body {
 }
 
 /* Container */
-.assessment-container {
-  width: 80%;
+.to-do-container, .results-container {
   max-width: 800px;
   margin: 50px auto;
   padding: 20px;
@@ -23,7 +22,9 @@ body {
 }
 
 .greeting {
+  padding: 50px;
   text-align: center;
+  font-size: 60px;
 }
 
 .to-do, .results {
@@ -32,20 +33,22 @@ body {
 }
 
 .to-do-btn, .results-btn {
+  margin: 10px;
   padding: 15px;
+  font-size: medium;
   width: 100%;
   text-align: center;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 15px;
   cursor: pointer;
   display: block;
 }
 
 .to-do-btn {
-  background-color: blue;
+  background-color: #315cec;
 }
 
 .results-btn {
-  background-color: red;
+  background-color: rgb(240, 50, 50);
 }
