--- a/PeerConnect/templates/PeerConnect/peer_answer_quant.html
+++ b/PeerConnect/templates/PeerConnect/peer_answer_quant.html
@@ -11,35 +11,43 @@
       <div class="ratings">
          <div class="rating-option">
              <span>The student communicates well.</span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star"></span>
-             <span class="fa fa-star"></span>
+             <div class=""stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+             </div>
          </div>
          <div class="rating-option">
              <span>The student is on time with their work.</span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star"></span>
-             <span class="fa fa-star"></span>
+             <div class=""stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+             </div>
          </div>
          <div class="rating-option">
              <span>The student is respectful to others.</span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star"></span>
-             <span class="fa fa-star"></span>
+             <div class=""stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+             </div>
          </div>
          <div class="rating-option">
              <span>The student contributes thoughtfully.</span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star checked"></span>
-             <span class="fa fa-star"></span>
-             <span class="fa fa-star"></span>
+             <div class=""stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+             </div>
          </div>
      </div>
 
