remove link underline - student dashboard

--- a/PeerConnect/static/styles/student_dashboard.css
+++ b/PeerConnect/static/styles/student_dashboard.css
@@ -32,6 +32,10 @@ body {
   margin-top: 20px;
 }
 
+.to-do a, .results a {
+  text-decoration: none;
+}
+
 .to-do-btn, .results-btn {
   margin: 10px;
   padding: 15px;
