--- a/PeerConnect/templates/PeerConnect/peer_answer_qual.html
+++ b/PeerConnect/templates/PeerConnect/peer_answer_qual.html
@@ -17,7 +17,7 @@
         <textarea id="weaknesses" class="input-box" placeholder="Write your response here..."></textarea>
     </div>
 
-    <button class="submit-btn">Submit</button>
+    <button class="submit-btn">Save</button>
 </div>
 
 {% endblock %}
