--- a/PeerConnect/templates/PeerConnect/peer_answer_quant.html
+++ b/PeerConnect/templates/PeerConnect/peer_answer_quant.html
@@ -51,6 +51,6 @@
          </div>
      </div>
 
-      <button class="submit-btn">Submit</button>
+      <button class="submit-btn">Save</button>
    </div>
 {% endblock %}
