--- a/PeerConnect/static/styles/student_dashboard.css
+++ b/PeerConnect/static/styles/student_dashboard.css
@@ -22,7 +22,8 @@ body {
 }
 
 .greeting {
-  padding: 50px;
+  padding-top: 100px;
+  padding-bottom: 50px;
   text-align: center;
   font-size: 60px;
 }
