--- a/PeerConnect/templates/PeerConnect/student_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/student_dashboard.html
@@ -11,7 +11,7 @@
 
       <div class="results-container">
          <div class="results">
-            <h2>Results</h2>
+            <h2>Results:</h2>
             <a href="{% url 'peer_answer_qual' %}"><button class="results-btn">Peer Assessment - Delivery One</button></a>
          </div>
       </div>
