--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Knewave&display=swap" rel="stylesheet">
 
     <link href="{% static 'styles/peer_answer_quant.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/peer_answer_qual.css' %}" rel="stylesheet" />
