--- a/PeerConnect/templates/navbar.html
+++ b/PeerConnect/templates/navbar.html
@@ -1,6 +1,6 @@
 <header class="main-header">
     <div class="header-container">
-        <h1 class="brand-name">PeerConnect</h1>
+        <a class="brand-name-link" href="{% url 'student_dashboard' %}"><h1 class="brand-name">PeerConnect</h1></a>
         
         <div class="course-selector">
             <div class="course-badge">
