--- a/PeerConnect/static/styles/peer_answer_tabs.css
+++ b/PeerConnect/static/styles/peer_answer_tabs.css
@@ -6,12 +6,14 @@
     padding: 10px;
     border-radius: 10px;
     width: 100%;
+    height: 100%;
   }
   
   .tab {
     flex: 1;
     width: 100%;
-    padding: 15px;
+    height: 100%;
+    padding: 10px;
     font-size: 18px;
     text-align: center;
     background: none;
@@ -22,6 +24,7 @@
   .tab.active {
     background: #fff;
     width: 100%;
+    height: 100%;
     font-weight: bold;
     border-radius: 10px;
   }
