small change to dashboard html

--- a/PeerConnect/templates/PeerConnect/student_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/student_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-      <h1 class="greeting">Welcome {{user.first_name}} - {{user_type}}</h1>
+      <h1 class="greeting">Welcome {{user.first_name}} - {{type}}</h1>
       <div class="to-do-container">
          <div class="to-do">
             <h2>To Do:</h2>
