extra edits to create.html and css

--- a/PeerConnect/templates/PeerConnect/create.html
+++ b/PeerConnect/templates/PeerConnect/create.html
@@ -26,7 +26,12 @@
             
             <div class="team-menu">
                <h2>Teams</h>
-             </div>
+
+               <ul class="team-list">
+                  <li class="team-item" data-team-id="1">Team A</li>
+                  <li class="team-item" data-team-id="2">Team B</li>
+                  <li class="team-item" data-team-id="3">Team C</li>
+               </ul>
 
 
             <button type="submit">Save Changes</button>
