--- a/PeerConnect/static/styles/create.css
+++ b/PeerConnect/static/styles/create.css
@@ -85,11 +85,18 @@ body {
   border-radius: 5px;
 }
 
-.team_menu {
-  display: flex;
-  width: 100px;
-  background-color: rgb(233, 145, 249);
+.team-menu {
+  grid-column: 1 / span 3;
+  height: 100vh;
+  width: 100vh;
+  color: grey;
+  padding: 20px;
 }
+
+
+
+
+
 
 
 
