--- a/PeerConnect/static/styles/create.css
+++ b/PeerConnect/static/styles/create.css
@@ -91,6 +91,37 @@ body {
   background-color: rgb(233, 145, 249);
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 50%;
+  margin: auto;
+}
+
+.close {
+  display: block;
+  text-align: right;
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+#course-popup:target {
+  display: flex;
+}
 
 
 
