--- a/PeerConnect/templates/PeerConnect/create.html
+++ b/PeerConnect/templates/PeerConnect/create.html
@@ -5,43 +5,24 @@
 
    <div class="left-column">
       <div class="title">Courses</div>
-      <div class="course-box">
-         {% for course in courses %}
-            {{ course.name }}
-         {% endfor %}
-      </div>
-      <div class="new-course"><a href="#course-popup">Create Course</a></div>
+      {% for course in courses %}
+         <form method="POST" action="{% url 'create' %}">
+            {% csrf_token %}
+            <input type="hidden" name="selected_course_id" value="{{ course.id }}">
+            <button type="submit" class="course-box">{{ course.name }}</button>
+         </form>
+      {% endfor %}
+      <a href="#course-popup"><div class="new-course">Create Course</div></a>
    </div>
 
    <div class="main-content">
-      <div class="grid-container">
-         <form method="POST" action="#">
-            <!-- Course Title -->
-            <input type="text" id="course-title" name="course-title" placeholder="Enter the course title" >
-            
-            <!-- Year -->
-            <input type="number" id="year" name="year" placeholder="Year"> 
-            
-            <!-- Semester -->
-            <input type="number" id="semester" name="semester" placeholder="Semester" > 
-            
-            <!-- Send Invites -->
-            <input type="text" id="invites" name="invites" placeholder="Send Invites" > 
-            
-            <div class="team-menu">
-               <h2>Teams</h>
-
-               <ul class="team-list">
-                  <li class="team-item" data-team-id="1">Team A</li>
-                  <li class="team-item" data-team-id="2">Team B</li>
-                  <li class="team-item" data-team-id="3">Team C</li>
-               </ul>
-
-
-            <button type="submit">Save Changes</button>
-         
-         </form>
-      </div>
+      {% if selected_course %}
+        <div id="team-content">
+            {% include 'PeerConnect/create_team.html' %}
+        </div>
+      {% else %}
+         <p id="no-course-message">You have no courses selected, please select or create to begin!</p>
+      {% endif %}
    </div>
 </div>
 
