--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -1,30 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="greeting">Welcome {{type}} {{user.first_name}}</h1>
+
     <div class="container">
         <aside class="sidebar">
-            <h2>Courses</h2>
-            <ul>
-                <li>Computer Science I (CSCI1101)</li>
-                <li>Computer Science II (CSCI1102)</li>
-                <li>Computer Systems (CSCI2271)</li>
-            </ul>
-            <button class="create-class-btn">+ Create New Class</button>
+            <h1>Welcome {{type}} {{user.first_name}}!</h1>
+            <h4>Summary Statistics</h4>
+            
         </aside>
+
         <div class="items">
-            <div class="form-activity">
-                <main class="dashboard-content">
-                    <section class="form-summary">
-                        <h2>Recent Form Activity</h2>
-                        <div class="form-box">
-                        <p><strong>Delivery 1:</strong> 85% submissions received</p>
-                        </div>
-                        <div class="form-box">
-                        <p><strong>Delivery 2:</strong> Open for submissions</p>
-                        </div>
-                    </section>
-                </main>
+            <div class="courses">
+                <a href="{% url 'create' %}"><button type="submit" class="course-box">Software Engineering</button></a>
+                {% for course in courses %}
+                    <a href="{% url 'create' %}"><button type="submit" class="course-box">{{ course.name }}</button></a>
+                {% endfor %}
+                <a href="{% url 'create' %}"><button type="submit" class="new-course">+</button></a>
             </div>
         </div>
     </div>
