--- a/PeerConnect/static/styles/professor_dashboard.css
+++ b/PeerConnect/static/styles/professor_dashboard.css
@@ -26,6 +26,7 @@
     border-radius: 10px;
     margin-right: 20px;
     text-align: center;
+    height: 500px;
     max-height: 100%;
   }
 
@@ -52,10 +53,10 @@
   }
   
   .greeting {
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding: 10px;
+    margin-top: 10px;
     text-align: center;
-    font-size: 60px;
+    font-size: 25px;
   }
   
   .to-do, .results {
