--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -4,7 +4,7 @@
 
     <div class="container">
         <aside class="sidebar">
-            <h1>Welcome {{type}} {{user.first_name}}!</h1>
+            <h1 class="greeting">Welcome {{type}} {{user.first_name}}!</h1>
             <h4>Summary Statistics</h4>
             
         </aside>
@@ -15,8 +15,9 @@
                 {% for course in courses %}
                     <a href="{% url 'create' %}"><button type="submit" class="course-box">{{ course.name }}</button></a>
                 {% endfor %}
-                <a href="{% url 'create' %}"><button type="submit" class="new-course">+</button></a>
+                <a href="{% url 'course_form' %}"><button type="submit" class="new-course">+</button></a>
             </div>
         </div>
     </div>
+    
 {% endblock %}
