--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -10,13 +10,18 @@
         </aside>
 
         <div class="items">
-            <div class="courses">
+            <div class="course-container">
                 {% for course in courses %}
-                    <a href="{% url 'create' %}"><button type="submit" class="course-box">{{ course.name }}</button></a>
+                    <a href="{% url 'create' %}">
+                        <button class="course-card">{{ course.name }}</button>
+                    </a>
                 {% endfor %}
-                <a href="#course-popup"><button type="submit" class="new-course">+</button></a>
+                <a href="#course-popup">
+                    <button class="course-card new-course">+</button>
+                </a>
             </div>
         </div>
+        
     </div>
 
     <div id="course-popup" class="modal">
