--- a/PeerConnect/templates/PeerConnect/create_team.html
+++ b/PeerConnect/templates/PeerConnect/create_team.html
@@ -14,22 +14,34 @@
     <title>PeerConnect</title>
 </head>
 <body>
-    <form method="POST" action="{% if course %}{% url 'save_team' course.id %}{% else %}#{% endif %}" class="team-form">
-        {% csrf_token %}
-        
-        <div class="form-group">
-            <label for="team-name">Team Name:</label>
-            {{ form.name }}
-        </div>
-
-        <div class="form-group">
-            <label>Members:</label>
-            <div class="checkbox-group">
-                {{ form.members }}
+    <section class="team-container">
+        <h1>{{ selected_course.name }} Teams</h1>
+        {% for team in teams %}
+            <p>{{ team.name }}</p>
+         <!--<form method="GET" action="{% url 'create' %}">
+            <input type="hidden" name="team_id" value="{{ team.id }}">
+            <button type="submit" class="course-box">
+                  {{ team.name }}
+            </button>
+         </form>-->
+      {% endfor %}
+        <form method="POST" action="{% if course %}{% url 'save_team' course.id %}{% else %}#{% endif %}" class="team-form">
+            {% csrf_token %}
+            
+            <div class="form-group">
+                <label for="team-name">Team Name:</label>
+                {{ form.name }}
             </div>
-        </div>
 
-        <button type="submit" class="submit-btn">Create Team</button>
-    </form>
+            <div class="form-group">
+                <label>Members:</label>
+                <div class="checkbox-group">
+                    {{ form.members }}
+                </div>
+            </div>
+
+            <button type="submit" class="submit-btn">Create Team</button>
+        </form>
+    </section>
 </body>
 </html>
